fix reply gap

--- a/front/src/routes/styles/reply.scss
+++ b/front/src/routes/styles/reply.scss
@@ -20,6 +20,7 @@
         background: white;
         border-radius: 20px;
         padding: 30px;
+        margin: 10px;
     }
 
     margin-bottom: 10px;
